# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [2.10.1] - 2023-09-12
### Fixed
- [LDAP_REPO] Avoid formatting errors for fields inserted to LDAP when creating/updating users
- [LDAP_REPO] Correct missing default user/group objectclasses configuration on existing repositories
- [RSYSLOG] Correct wrong rsyslog input configuration generation
- [NODE] [STATUS] Don't update Node state when put into MAINTENANCE
- [API_PARSER] Avoid problems while getting parameters by defining custom values
- [API_PARSER] [STATUS] Correctly set and update each node status for API parsers
- [API_PARSER] [SENTINEL_ONE] Fix account_type="user service" authentication routine


## [2.10.0] - 2023-08-22
### Removed
- [PREDATOR] Remove predator references
### Added
- [GUI] [FRONTEND] Selector of a custom certificate to use with an api parser
- [LOG_FORWARDER] [HIREDIS] Ability to specify that the destination key is a dynamic template
- [LOG_FORWARDER] New send_as_raw feature for LogForwarders in gui
- [API_PARSER] New collector **Retarus**
- [BACKEND] [GUI] HTTP/2 Health check
- [BACKEND] [GUI] TCP Health check
- [CLUSTER] Node state and heartbeat
- [GUI] API collector node runner selector
- [LDAP] Allow to define custom ObjectClasses for Users and Groups when creating them through Vulture
- [LOG_FORWARDER] [KAFKA] New Kafka log forwarder
### Changed
- [LOG_FORWARDER] [HIREDIS] Use updated templates <name>_json
- [FILEBEAT] [CONFIGURATION] Use internal Redis proxyfication with Haproxy instead of direct connections
### Fixed
- [FRONTEND] [CLONE] Resolve GUI loading problems when cloning an existing Frontend
- [FRONTEND] [FILEBEAT] Avoid overriding default module config for all Frontends when changed in one
- [FRONTEND] Disable logforwarder if logging disabled